refactor: update branding in index.html and manifest.json
- Changed the title in index.html from "EMBER AMP" to "EMBER" for a more concise brand representation.
- Updated the name in manifest.json from "Ember Amp" to "EMBER" to maintain consistency across the application.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ember Amp",
-  "short_name": "Ember",
+  "name": "EMBER",
+  "short_name": "EMBER",
   "description": "Browser-based HiFi amplifier simulator with real-time DSP",
   "theme_color": "#1a1a1a",
   "background_color": "#1a1a1a",
